update the folder style.css

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>EU SOU FODA!!!</h1>
     <p>Que tiro foi esse VIADAAAAA APRENDEUUUUUUUU</p>
+    <main>
+        <h3>essa garota ainda vai muito longe</h3>
+    </main>
 </body>
 </html>
