--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <main>
         <h3>essa garota ainda vai muito longe</h3>
     </main>
+    <footer>
+        <p>Eu sou o rodapé</p>
 </body>
 </html>
