--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <h3>essa garota ainda vai muito longe</h3>
     </main>
     <footer>
-        <p>Eu sou o rodapé</p>
+        <p>Eu sou o louca só pode</p>
 </body>
 </html>
