--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     </main>
     <footer>
         <p>Eu sou o louca só pode</p>
+        um pequeno desabafo:
+        as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo
 </body>
 </html>
