--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <footer>
         <p>Eu sou o louca só pode</p>
         um pequeno desabafo:
-        as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo
+        as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo...
+        <p> Eu queria ter o poder de esquecer tantas coisas mais tem algo que me prende, mais o que me prende eu sei o que é se chama ódio de certas atitudes, o que me condena é a minha mente </p>
 </body>
 </html>
