update the folder index.html

--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
         um pequeno desabafo:
         as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo...
         <p> Eu queria ter o poder de esquecer tantas coisas mais tem algo que me prende, mais o que me prende eu sei o que é se chama ódio de certas atitudes, o que me condena é a minha mente </p>
+        A única prisão que me prende é a que criei na minha mente."
+
+        <p>"O maior obstáculo que enfrento sou eu mesmo."</p>
+
+        <p>"O que me impede de avançar é a dúvida que reside na minha mente."</p>
+
+        <p>"Minha maior batalha é contra os pensamentos que limitam meu potencial."</p>
+
+        <p>"A mente pode ser meu maior aliado ou o meu maior inimigo."</p>
+
+        <p>"Sou escravo dos meus pensamentos, até que eu decida ser livre."</p>
 </body>
 </html>
