salvar alterações de todas as pasta

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <main>
         <h3>essa garota ainda vai muito longe</h3>
     </main>
-    <footer>
-        <p>Eu sou o louca só pode</p>
-        um pequeno desabafo:
-        as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo...
-        <p> Eu queria ter o poder de esquecer tantas coisas mais tem algo que me prende, mais o que me prende eu sei o que é se chama ódio de certas atitudes, o que me condena é a minha mente </p>
-        A única prisão que me prende é a que criei na minha mente."
+    
+        Um pequeno desabafo:
+        <p>as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo...</p>
 
         <p>"O maior obstáculo que enfrento sou eu mesmo."</p>
 
