update the folder index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>EU SOU FODA!!!</h1>
     <p>Que tiro foi esse VIADAAAAA APRENDEUUUUUUUU</p>
     <main>
-        <h3>essa garota ainda vai muito longe</h3>
+        <h3>essa garota ainda vai muito longe, mais tenho ainda muito o que arrumar, promessas que me fiz e ainda não cumprir </h3>
     </main>
-    
+        <p>literalmte eu tranquei a porta dos meus sentimentos</p>
+
         <p>as vezes vc pensa que é o fim de tudo e ao mesmo tempo é o começo de tudo...</p>
 
         <p>"O maior obstáculo que enfrento sou eu mesmo."</p>
